# adsbrain_backend

./: .gitignore  CMakeLists.txt  README.md  build.sh  check_mem_leak.sh  install_deps.sh  run_backend.sh  valgrind_suppression.txt
cmake/: AdsbrainBackendConfig.cmake.in
src/: adsbrain_backend.cc  adsbrain_backend.h
